--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 streamlit==1.25.0
 mediapipe==0.10.5
 opencv-python-headless
-streamlit-webrtc
-python-av
+python-av==10.0.0
+streamlit-webrtc==0.47.1
 numpy==1.24.2
 pyttsx3==2.90
